# Ascend-IndexSDK

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirement.txt
docker/: OVERVIEW.md  OVERVIEW.zh.md
docker/9.0.0-beta-310p-openeuler24.03-py3.11/: Dockerfile.310p.openeuler
docker/9.0.0-beta-310p-ubuntu22.04-py3.11/: Dockerfile.310p.ubuntu
docker/9.0.0-beta-910b-openeuler24.03-py3.11/: Dockerfile.910b.openeuler
docker/9.0.0-beta-910b-ubuntu22.04-py3.11/: Dockerfile.910b.ubuntu
docker/9.0.0-beta-a3-openeuler24.03-py3.11/: Dockerfile.a3.openeuler
docker/9.0.0-beta-a3-ubuntu22.04-py3.11/: Dockerfile.a3.ubuntu
docs/zh/: _memu_indexsdk.md  _menu_indexsdk.md  appendix.md  common_operations.md  faq.md  installation_guide.md  introduction.md  release_notes.md  security_hardening.md  user_guide.md
docs/zh/api/: README.md  approximate_retrieval.md  attribute_filtering-based_retrieva.md  attribute_filtering-based_retrieval.md  full_retrieval.md  more_functions.md  multi-index_batch_retrieval.md  return_code_reference.md  unused_apis.md
feature_retrieval/src/ascendfaiss/ascend/: AscendIndex.h  AscendIndexIVFFlat.cpp  AscendIndexIVFFlat.h  AscendIndexIVFPQ.cpp  AscendIndexIVFPQ.h
feature_retrieval/src/ascendfaiss/ascend/custom/: AscendClustering.cpp  AscendClustering.h
feature_retrieval/src/ascendfaiss/ascend/custom/impl/: AscendIndexIVFSQCImpl.cpp  AscendIndexIVFSQTImpl.cpp
feature_retrieval/src/ascendfaiss/ascend/impl/: AscendIndexIVFFlatImpl.cpp  AscendIndexIVFFlatImpl.h  AscendIndexIVFImpl.cpp  AscendIndexIVFImpl.h  AscendIndexIVFPQImpl.cpp  AscendIndexIVFPQImpl.h  AscendIndexIVFSQImpl.cpp  AscendIndexImpl.cpp  AscendInt8PipeSearchImpl.h
feature_retrieval/src/ascendfaiss/ascend/ivfsp/: AscendIndexIVFSP.cpp  AscendIndexIVFSP.h
feature_retrieval/src/ascendfaiss/ascend/utils/: AscendIVFAddInfo.h
feature_retrieval/src/ascendfaiss/ascenddaemon/: StandardAscendResources.cpp  StandardAscendResources.h
feature_retrieval/src/ascendfaiss/ascenddaemon/impl/: IndexIVFFlat.cpp  IndexIVFFlat.h  IndexIVFPQ.cpp  IndexIVFPQ.h
feature_retrieval/src/ascendfaiss/ascenddaemon/utils/: DeviceMemMng.h  DeviceVector.h  DistComputeOpsManager.cpp  Random.h
feature_retrieval/src/ascendfaiss/ascendhost/: CMakeLists.txt
feature_retrieval/src/ascendfaiss/ascendhost/include/impl/: AscendClusteringImpl.h
feature_retrieval/src/ascendfaiss/ascendhost/src/impl/: AscendClusteringImpl.cpp  AscendIndexBinaryFlatImpl.cpp  AscendIndexILFlatImpl.cpp  HeteroBlockGroupMgrImpl.cpp  TSBase.cpp
feature_retrieval/src/ascendfaiss/ascendhost/src/index/: AscendIndexILFlat.cpp  IndexInt8FlatCosAicpu.cpp
feature_retrieval/src/ascendfaiss/cmake/: AscendRelease.cmake
feature_retrieval/src/ascendfaiss/common/: ErrorCode.h
feature_retrieval/src/ascendfaiss/common/utils/: CommonUtils.h
feature_retrieval/src/ascendfaiss/ops/ascendc/op_host/: CMakeLists.txt  ascendc_ivfpq_search_distance_l2.cpp  ascendc_ivfpq_search_distance_tiling.h  ascendc_ivfpq_subspace_distance.cpp  ascendc_ivfpq_subspace_distance_tiling.h  distance_flat_l2_mins_at_fp32.cpp  distance_flat_l2_mins_at_fp32_tiling.h  distance_ivf_flat_ip_fp32.cpp  distance_ivf_flat_ip_fp32_tiling.h
feature_retrieval/src/ascendfaiss/ops/ascendc/op_kernel/: ascendc_ivfpq_search_distance_l2.cpp  ascendc_ivfpq_search_distance_topk.h  ascendc_ivfpq_subspace_distance.cpp  distance_flat_l2_mins_at_fp32.cpp
feature_retrieval/src/ascendfaiss/ops/cmake/util/: aicpu_parser_ini.py  ascendc_impl_build.py  const_var.py  merge_json.py  opdesc_parser.py  parse_ini_to_json.py
feature_retrieval/src/ascendfaiss/ops/cpukernel/impl/: topk_flat_cpu_kernel.cpp  (+7 more)
feature_retrieval/src/ascendfaiss/test/ascendhost/: TSFlatIPCompare.py
feature_retrieval/src/ascendfaiss/test/python/: TestAscendIndexFlat.py  TestAscendIndexFlatSift1M.py  TestAscendIndexIVFFlat.py  TestAscendIndexIVFFlatSift1M.py  TestAscendIndexIVFPQ.py  TestAscendIndexIVFPQSift1M.py  TestAscendIndexIVFSQ.py  TestAscendIndexIVFSQSift1M.py  TestAscendIndexInt8FlatSift1M.py  TestAscendIndexInt8IVFFlatSift1M.py  TestAscendIndexSQ.py  TestAscendIndexSQSift1M.py  TestIndexAscendToCpu.py  TestIndexCpuToAscend.py  TestSift1M.py  ascendargs.py  common.py  datasets.py
feature_retrieval/src/ascendfaiss/tools/: aicpu_generate_model.py  ascendc_ivfpq_search_distance_l2_generate_model.py  ascendc_ivfpq_subspace_distance_generate_model.py  binary_flat_generate_model.py  common.py  flat_at_generate_model.py  flat_at_int8_generate_model.py  flat_generate_model.py  int8flat_generate_model.py  ivfflat_generate_model.py  ivfpq_generate_model.py  ivfsq8_generate_model.py  ivfsqt_generate_model.py  mask_generate_model.py  run_generate_model.py  sq8_generate_model.py
feature_retrieval/src/ascendfaiss/ut/: CMakeLists.txt  TestAscendIndexILFlatUT.cpp  TestAscendIndexUTClustering.cpp  TestAscendIndexUTIVFFlat.cpp  TestAscendIndexUTIVFPQ.cpp
ivfsp_impl/ascendfaiss/tools/: common.py  spsq_generate_model.py
ivfsp_utils/src/CodeBookTraining_vstar/: py2so.py  vstar_train_codebook.py  vstar_trainer.py
ivfsp_utils/src/DR/: PADR.py  call_train.py
ivfsp_utils/src/common/: ErrorCode.h
ivfsp_utils/src/common/utils/: CommonUtils.h
ivfsp_utils/src/ops/cmake/util/: aicpu_parser_ini.py  parse_ini_to_json.py
ivfsp_utils/src/ops_IVFSP/cmake/util/: aicpu_parser_ini.py
ivfsp_utils/src/ops_IVFSP/cpukernel/impl/: topk_flat_cpu_kernel.cpp  topk_spsq_cpu_kernel.cpp
ivfsp_utils/src/ops_IVFSP/tbe/: setup.py
ivfsp_utils/src/ops_IVFSP/tbe/impl/: corr_compute.py  distance_compute_qc.py  distance_ivf_sp_int_l2.py  distance_ivf_sp_int_l2_mins.py  distance_masked_ivf_sp_int_l2_mins.py  fp_to_fp16.py  ivf_cid_filter3.py  matmul_compute.py
ivfsp_utils/src/ops_vstar/: vstar_generate_models.py
ivfsp_utils/src/ops_vstar/AscendcOps/op_host/: vstar_compute_l2.cpp
ivfsp_utils/src/tools/ascendfaiss/tools/: aicpu_generate_model.py  ivfsp_generate_model.py  ivfsp_generate_pyacl_model.py
ivfsp_utils/src/tools/ascendfaiss/train/: SP.py  train.py
vstar_great_impl/mix-index/include/npu/common/: ErrorCode.h
(+77 files in other folders)
